--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 diff-match-patch==20121119
-Django==2.0.8
+Django==2.0.6
 django-import-export==1.0.1
+django-nested-admin==3.0.21
 django-widget-tweaks==1.4.2
 et-xmlfile==1.0.1
 jdcal==1.4
+jsonfield==2.0.2
+libsass==0.15.0
 odfpy==1.3.6
 openpyxl==2.5.4
+python-monkey-business==1.0.0
 pytz==2018.5
 PyYAML==3.13
+six==1.11.0
 tablib==0.12.1
 unicodecsv==0.14.1
 xlrd==1.1.0
